# vecgrep

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
examples/: expected_basic.txt  logs.txt
src/: main.rs
